ready to publish

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>QUICK-NOTE</title>
   </head>
 
-  <body class="bg-gray-600">
+  <body class="bg-gradient-to-r from-green-900 via-purple-950 to-blue-900">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
